# t5-llm-training

./: .gitignore  README.md  pyproject.toml  run_main.py
abs_summarization/: constants.py  custom_dataset.py  init_wandb.py  main.py  training.py  validation.py
abs_summarization/models/: predictions.csv  read_result.py
abs_summarization/tokenizer/: main.py
abs_summarization/training_set/id_training_data/: csv_splitter.py  read_jsonl.py
tests/: sample_text.txt  sample_text2.txt  test.py
